--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
+    "axios": "^1.2.2",
+    "msw": "^0.49.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
@@ -52,5 +54,8 @@
     "prettier": "^2.8.1",
     "typescript": "^4.9.4",
     "vite": "^4.0.0"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
