[FEAT] indexedDB 초기 설정

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-awesome-reveal": "^4.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-indexed-db": "^1.0.12",
     "react-router-dom": "^6.6.1",
     "recoil": "^0.7.6",
     "styled-components": "^5.3.6",
@@ -24,13 +25,10 @@
     "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.7",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.3",
-    "@types/react-icons": "^3.0.0",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/styled-components": "^5.1.26",
-    "@babel/core": "^7.20.7",
     "@storybook/addon-actions": "^6.5.15",
     "@storybook/addon-essentials": "^6.5.15",
     "@storybook/addon-interactions": "^6.5.15",
@@ -40,6 +38,9 @@
     "@storybook/testing-library": "^0.0.13",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/react-icons": "^3.0.0",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
     "@vitejs/plugin-react": "^3.0.0",
