--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "msw": "^0.49.2",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.1.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-indexed-db": "^1.0.12",
@@ -46,6 +47,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.2.5",
     "@types/react": "^18.0.26",
+    "@types/react-beautiful-dnd": "^13.1.3",
     "@types/react-dom": "^18.0.9",
     "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "^5.3.3",
