--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "eslint-plugin-storybook": "^0.6.8",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
+    "jest-html-reporter": "^3.7.0",
     "prettier": "^2.8.1",
     "react-test-renderer": "^18.2.0",
     "ts-jest": "^29.0.3",
