--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^1.2.2",
     "msw": "^0.49.2",
+    "mui": "^0.0.1",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.1.0",
     "react-beautiful-dnd": "^13.1.1",
