--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "jest-html-reporter": "^3.7.0",
     "prettier": "^2.8.1",
     "react-test-renderer": "^18.2.0",
+    "styled-system": "^5.1.5",
     "ts-jest": "^29.0.3",
     "typescript": "^4.9.4",
     "vite": "^4.0.0"
