--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-indexed-db": "^1.0.12",
     "react-router-dom": "^6.6.1",
     "recoil": "^0.7.6",
+    "shortid": "^2.2.16",
     "styled-components": "^5.3.6",
     "sweetalert2": "^11.6.16",
     "vite-plugin-svgr": "^2.4.0"
@@ -52,6 +53,7 @@
     "@types/react-dom": "^18.0.9",
     "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "^5.3.3",
+    "@types/shortid": "^0.0.29",
     "@types/styled-components": "^5.1.26",
     "@types/styled-system": "^5.1.16",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
