--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-indexed-db": "^1.0.12",
     "react-router-dom": "^6.6.1",
     "recoil": "^0.7.6",
+    "recoil-persist": "^4.2.0",
     "shortid": "^2.2.16",
     "styled-components": "^5.3.6",
     "sweetalert2": "^11.6.16",
