--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "coverage": "jest --config ./jest.config.cjs --coverage"
   },
   "dependencies": {
+    "@mui/material": "^5.11.3",
     "axios": "^1.2.2",
     "msw": "^0.49.2",
     "mui": "^0.0.1",
-    "@mui/material": "^5.11.3",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.1.0",
     "react-beautiful-dnd": "^13.1.1",
@@ -24,6 +24,7 @@
     "react-icons": "^4.7.1",
     "react-indexed-db": "^1.0.12",
     "react-router-dom": "^6.6.1",
+    "react-spinners": "^0.13.8",
     "recoil": "^0.7.6",
     "recoil-persist": "^4.2.0",
     "shortid": "^2.2.16",
