--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "coverage": "jest --config ./jest.config.cjs --coverage"
   },
   "dependencies": {
+    "@hassanmojab/react-modern-calendar-datepicker": "^3.1.7",
     "@mui/material": "^5.11.3",
     "axios": "^1.2.2",
     "msw": "^0.49.2",
