--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-indexed-db": "^1.0.12",
     "react-router-dom": "^6.6.1",
     "react-spinners": "^0.13.8",
+    "react-type-animation": "^2.1.2",
     "recoil": "^0.7.6",
     "recoil-persist": "^4.2.0",
     "shortid": "^2.2.16",
