--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/jest": "^29.2.5",
     "@types/react": "^18.0.26",
     "@types/react-beautiful-dnd": "^13.1.3",
+    "@types/react-color": "^3.0.6",
     "@types/react-dom": "^18.0.9",
     "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "^5.3.3",
@@ -79,6 +80,7 @@
     "jest-html-reporter": "^3.7.0",
     "prettier": "^2.8.1",
     "react-test-renderer": "^18.2.0",
+    "rgb-hex": "^4.0.0",
     "styled-system": "^5.1.5",
     "ts-jest": "^29.0.3",
     "typescript": "^4.9.4",
