--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "axios": "^1.2.2",
     "msw": "^0.49.2",
     "mui": "^0.0.1",
-    "rgb-hex": "^4.0.0",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.1.0",
     "react-beautiful-dnd": "^13.1.1",
@@ -30,6 +29,7 @@
     "react-type-animation": "^2.1.2",
     "recoil": "^0.7.6",
     "recoil-persist": "^4.2.0",
+    "rgb-hex": "^4.0.0",
     "shortid": "^2.2.16",
     "styled-components": "^5.3.6",
     "sweetalert2": "^11.6.16",
@@ -80,6 +80,7 @@
     "jest-environment-jsdom": "^29.3.1",
     "jest-html-reporter": "^3.7.0",
     "prettier": "^2.8.1",
+    "react-color": "^2.19.3",
     "react-test-renderer": "^18.2.0",
     "styled-system": "^5.1.5",
     "ts-jest": "^29.0.3",
