--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "coverage": "jest --config ./jest.config.cjs --coverage"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.1",
+    "@fullcalendar/daygrid": "^6.1.1",
+    "@fullcalendar/react": "^6.1.2",
     "@hassanmojab/react-modern-calendar-datepicker": "^3.1.7",
     "@mui/material": "^5.11.3",
     "axios": "^1.2.2",
