--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "coverage": "jest --config ./jest.config.cjs --coverage"
   },
   "dependencies": {
+    "@djthoms/pretty-checkbox": "^3.1.0",
     "@hassanmojab/react-modern-calendar-datepicker": "^3.1.7",
     "@mui/material": "^5.11.3",
     "axios": "^1.2.2",
     "msw": "^0.49.2",
     "mui": "^0.0.1",
+    "pretty-checkbox-react": "^3.2.0",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.1.0",
     "react-beautiful-dnd": "^13.1.1",
@@ -81,7 +83,6 @@
     "jest-environment-jsdom": "^29.3.1",
     "jest-html-reporter": "^3.7.0",
     "prettier": "^2.8.1",
-    "react-color": "^2.19.3",
     "react-test-renderer": "^18.2.0",
     "styled-system": "^5.1.5",
     "ts-jest": "^29.0.3",
