--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "coverage": "jest --config ./jest.config.cjs --coverage"
   },
   "dependencies": {
+    "@djthoms/pretty-checkbox": "^3.1.0",
     "@fullcalendar/core": "^6.1.1",
     "@fullcalendar/daygrid": "^6.1.1",
     "@fullcalendar/react": "^6.1.2",
@@ -21,6 +22,7 @@
     "axios": "^1.2.2",
     "msw": "^0.49.2",
     "mui": "^0.0.1",
+    "pretty-checkbox-react": "^3.2.0",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.1.0",
     "react-beautiful-dnd": "^13.1.1",
