--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@djthoms/pretty-checkbox": "^3.1.0",
     "@fullcalendar/core": "^6.1.1",
     "@fullcalendar/daygrid": "^6.1.1",
+    "@fullcalendar/list": "^6.1.4",
     "@fullcalendar/react": "^6.1.2",
     "@hassanmojab/react-modern-calendar-datepicker": "^3.1.7",
     "@mui/material": "^5.11.3",
