--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,11 @@
   "compilerOptions": {
     "target": "ESNext",
     "useDefineForClassFields": true,
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "lib": [
+      "DOM",
+      "DOM.Iterable",
+      "ESNext"
+    ],
     "allowJs": false,
     "skipLibCheck": true,
     "esModuleInterop": false,
@@ -16,14 +20,25 @@
     "noEmit": true,
     "strictNullChecks": false,
     "jsx": "react-jsx",
-    "baseUrl": ".", 
+    "baseUrl": ".",
     "paths": {
-      "@/*": [  
+      "@/*": [
         "src/*",
       ],
-      "$cypress/*": ["../cypress/*"] 
+      "$cypress/*": [
+        "../cypress/*"
+      ]
     }
   },
-  "include": ["src", "./node_modules/cypress", "cypress"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "exclude": [
+    "cypress/**/*"
+  ],
+  "include": [
+    "src"
+  ],
+  "references": [
+    {
+      "path": "./tsconfig.node.json"
+    }
+  ]
 }
